commit translated contents

--- a/docs/visual-basic/misc/bc32509.md
+++ b/docs/visual-basic/misc/bc32509.md
@@ -1,5 +1,5 @@
 ---
-title: Impossibile applicare 'ComClassAttribute' a '<classname>' perché non è dichiarato 'Public'
+title: Impossibile applicare 'Microsoft.VisualBasic.ComClassAttribute' a '<classname>' perché non è dichiarato 'Public'
 ms.date: 07/20/2015
 f1_keywords:
 - bc32509
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32509
 ms.assetid: ac46851f-53ab-4ce6-87b1-4c4d29508527
-ms.openlocfilehash: 92703b8baaf833e81aca89795c8eb3067fb835ae
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 3aef273464a998a7ef013189afe1b7b3a05f1d1a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64593102"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385652"
 ---
-# <a name="microsoftvisualbasiccomclassattribute-cannot-be-applied-to-classname-because-it-is-not-declared-public"></a>Impossibile applicare 'ComClassAttribute' a '\<NomeClasse >' perché non è dichiarato 'Public'
+# <a name="microsoftvisualbasiccomclassattribute-cannot-be-applied-to-classname-because-it-is-not-declared-public"></a>Impossibile applicare 'Microsoft.VisualBasic.ComClassAttribute' a '\<classname>' perché non è dichiarato 'Public'
 Una classe viene dichiarata con <xref:Microsoft.VisualBasic.ComClassAttribute>, ma la relativa dichiarazione non specifica `Public`.  
   
  Per essere idonea per l'interoperabilità COM, una classe .NET Framework deve soddisfare i requisiti seguenti:  
@@ -38,5 +38,5 @@ Una classe viene dichiarata con <xref:Microsoft.VisualBasic.ComClassAttribute>, 
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:Microsoft.VisualBasic.ComClassAttribute>
-- [Interoperabilità COM](../../visual-basic/programming-guide/com-interop/index.md)
-- [Public](../../visual-basic/language-reference/modifiers/public.md)
+- [Interoperabilità COM](../programming-guide/com-interop/index.md)
+- [Pubblica](../language-reference/modifiers/public.md)
