--- a/docs/visual-basic/misc/bc33013.md
+++ b/docs/visual-basic/misc/bc33013.md
@@ -1,5 +1,5 @@
 ---
-title: Gli operatori non possono essere dichiarati '<keyword>'
+title: Gli operatori non possono essere dichiarati ' <keyword> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc33013
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC33013
 ms.assetid: bfd805f4-e30e-4553-9cb7-2690595f0480
-ms.openlocfilehash: a989a66bac436fe1762086810059517d994b1c5b
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: d00f351d9ba5cd39d8b90f2cf6d5a253d078576c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64912948"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385223"
 ---
-# <a name="operators-cannot-be-declared-keyword"></a>Gli operatori non possono essere dichiarati '\<parola chiave >'
+# <a name="operators-cannot-be-declared-keyword"></a>Gli operatori non possono essere dichiarati ' \<keyword> '
 Un operatore è dichiarato con una parola chiave che non è valida per le definizioni dell'operatore.  
   
- Ogni operatore deve essere dichiarato sia come [pubbliche](../../visual-basic/language-reference/modifiers/public.md) e [condiviso](../../visual-basic/language-reference/modifiers/shared.md). Inoltre, un operatore di conversione deve essere dichiarato con [Widening](../../visual-basic/language-reference/modifiers/widening.md) o [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md), ma non con entrambi. Una definizione di operatore può includere facoltativamente le parole chiave [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) o [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) . Non sono consentite altre parole chiave in un' [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md).  
+ Ogni operatore deve essere dichiarato come [pubblico](../language-reference/modifiers/public.md) e [condiviso](../language-reference/modifiers/shared.md). Inoltre, un operatore di conversione deve essere dichiarato con [Widening](../language-reference/modifiers/widening.md) o [Narrowing](../language-reference/modifiers/narrowing.md), ma non con entrambi. Una definizione di operatore può includere facoltativamente le parole chiave [Overloads](../language-reference/modifiers/overloads.md) o [Shadows](../language-reference/modifiers/shadows.md) . Non sono consentite altre parole chiave in un' [Operator Statement](../language-reference/statements/operator-statement.md).  
   
  **ID errore:** BC33013  
   
@@ -27,6 +27,6 @@ Un operatore è dichiarato con una parola chiave che non è valida per le defini
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine di operatore](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [Procedura: Definire un operatore](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [Procedura: Definire un operatore di conversione](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [Routine di operatore](../programming-guide/language-features/procedures/operator-procedures.md)
+- [Procedura: definire un operatore](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [Procedura: Definire un operatore di conversione](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
