--- a/docs/visual-basic/misc/bc33039.md
+++ b/docs/visual-basic/misc/bc33039.md
@@ -1,5 +1,5 @@
 ---
-title: Tipi restituiti e parametri di '<operator>'deve essere'<typename>' da usare in un'istruzione 'For'
+title: I tipi restituiti e i tipi di parametro di '<operator>' devono essere '<typename>' per poter essere usati in un'istruzione 'For'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc33039
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC33039
 ms.assetid: 30e8cfa8-c086-474c-a4f0-ad01d01096e2
-ms.openlocfilehash: 7e68fa2f283d58418e8d1e07753388ac44d4fb90
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: fbe3df05d73b51b79cd5d60894d203cb6fbb4c1f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61761929"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379666"
 ---
-# <a name="return-and-parameter-types-of-operator-must-be-typename-to-be-used-in-a-for-statement"></a>Tipi restituiti e parametri di '\<operatore >' deve essere '\<nomeTipo >' da usare in un'istruzione 'For'
+# <a name="return-and-parameter-types-of-operator-must-be-typename-to-be-used-in-a-for-statement"></a>I tipi restituiti e i tipi di parametro di '\<operator>' devono essere '\<typename>' per poter essere usati in un'istruzione 'For'
 Un ciclo `For` specifica una variabile contatore di un tipo che non definisce l'operatore `+` o `-` con i parametri e il valore restituito del suo stesso tipo.  
   
  La variabile contatore deve essere di un tipo che supporta operatori di aggiunta (`+`) e sottrazione (`-`) che agiscono completamente nel relativo tipo contenitore. Ciò significa che sia gli operandi che il valore restituito devono essere del tipo della variabile contatore.  
@@ -31,8 +31,8 @@ Un ciclo `For` specifica una variabile contatore di un tipo che non definisce l'
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione For...Next](../../visual-basic/language-reference/statements/for-next-statement.md)
-- [Routine di operatore](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [Istruzione Operator](../../visual-basic/language-reference/statements/operator-statement.md)
-- [Procedura: Definire un operatore](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [Procedura: Definire un operatore di conversione](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [Istruzione For...Next](../language-reference/statements/for-next-statement.md)
+- [Routine di operatore](../programming-guide/language-features/procedures/operator-procedures.md)
+- [Operator Statement](../language-reference/statements/operator-statement.md)
+- [Procedura: definire un operatore](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [Procedura: Definire un operatore di conversione](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
