--- a/docs/visual-basic/misc/bc33041.md
+++ b/docs/visual-basic/misc/bc33041.md
@@ -1,5 +1,5 @@
 ---
-title: Operatore '<operator>' deve avere un secondo parametro di tipo 'Integer'
+title: L'operatore '<operator>' deve avere un secondo parametro di tipo 'Integer'
 ms.date: 07/20/2015
 f1_keywords:
 - BC33041
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC33041
 ms.assetid: 5cd56f6d-2f0f-49de-a8e6-59bdb57bdb1d
-ms.openlocfilehash: 257267c9c7839da8780522f2d37a3bd1f772401e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 23d7d2bb6d4492fad0a3656f628861dcd306a965
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64626554"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379445"
 ---
-# <a name="operator-operator-must-have-a-second-parameter-of-type-integer"></a>Operatore '\<operatore >' deve avere un secondo parametro di tipo 'Integer'
+# <a name="operator-operator-must-have-a-second-parameter-of-type-integer"></a>L'operatore '\<operator>' deve avere un secondo parametro di tipo 'Integer'
 È stato dichiarato un operatore di spostamento di bit con un secondo parametro di tipo diverso da `Integer`.  
   
- Quando si usa l'operatore di spostamento a destra (`>>`) o di spostamento a sinistra (`<<`) in un'espressione, l'entità dello spostamento deve essere specificata nel secondo operando. Per questo operando, Visual Basic consente di specificare qualsiasi tipo di dati che si amplia in `Integer`. La definizione del secondo operando, tuttavia, è rigorosamente `Integer`. Se si definisce una classe o una struttura con un operatore di spostamento di bit su di essa, nella definizione è necessario specificare `Integer` per il secondo operando.  
+ Quando si usa l'operatore di spostamento a destra (`>>`) o di spostamento a sinistra (`<<`) in un'espressione, l'entità dello spostamento deve essere specificata nel secondo operando. Per questo operando, Visual Basic consente di fornire qualsiasi tipo di dati che si amplia a `Integer` . La definizione del secondo operando, tuttavia, è rigorosamente `Integer`. Se si definisce una classe o una struttura con un operatore di spostamento di bit su di essa, nella definizione è necessario specificare `Integer` per il secondo operando.  
   
  **ID errore:** BC33041  
   
@@ -27,8 +27,8 @@ ms.locfileid: "64626554"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine di operatore](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [Istruzione Operator](../../visual-basic/language-reference/statements/operator-statement.md)
-- [Procedura: Definire un operatore](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [Procedura: Definire un operatore di conversione](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
-- [Operatori di spostamento bit](../../visual-basic/language-reference/operators/bit-shift-operators.md)
+- [Routine di operatore](../programming-guide/language-features/procedures/operator-procedures.md)
+- [Operator Statement](../language-reference/statements/operator-statement.md)
+- [Procedura: definire un operatore](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [Procedura: Definire un operatore di conversione](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [Operatori di spostamento bit](../language-reference/operators/bit-shift-operators.md)
