--- a/docs/visual-basic/misc/bc40021.md
+++ b/docs/visual-basic/misc/bc40021.md
@@ -1,5 +1,5 @@
 ---
-title: Membro '<membername>'è in conflitto con membro'<membername>'nel tipo di base'<basetypename>' e pertanto non deve essere dichiarato 'Overloads'
+title: Il membro '<membername>' è in conflitto con il membro '<membername>' nel tipo di base '<basetypename>', quindi deve essere dichiarato come 'Shadows'
 ms.date: 07/20/2015
 f1_keywords:
 - bc40021
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC40021
 ms.assetid: 2ec72726-ab0e-4545-9c1e-2409eb54482e
-ms.openlocfilehash: 0f328edbb2cda9c7265624678b07263216558143
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 159de87f9309a403723d89c55c9ddf5af359ef14
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64624448"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384404"
 ---
-# <a name="member-membername-conflicts-with-member-membername-in-the-base-type-basetypename-and-so-should-not-be-declared-overloads"></a>Membro '\<nomeMembro >' è in conflitto con membro '\<nomeMembro >' nel tipo di base '\<nomeTipoBase >' e pertanto non deve essere dichiarato 'Overloads'
-Una proprietà o routine usa la parola chiave [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) per dichiarare nuovamente una proprietà o routine esistente con lo stesso nome, ma la proprietà o routine esistente si trova nella classe base.  
+# <a name="member-membername-conflicts-with-member-membername-in-the-base-type-basetypename-and-so-should-not-be-declared-overloads"></a>Il membro '\<membername>' è in conflitto con il membro '\<membername>' nel tipo di base '\<basetypename>', quindi deve essere dichiarato come 'Shadows'
+Una proprietà o routine usa la parola chiave [Overloads](../language-reference/modifiers/overloads.md) per dichiarare nuovamente una proprietà o routine esistente con lo stesso nome, ma la proprietà o routine esistente si trova nella classe base.  
   
- L'overload viene usato per definire più versioni di una proprietà o routine tutte appartenenti alla stessa classe. Non è possibile definire un'ulteriore versione del membro di una classe base a meno che questo non specifichi già [Overloads](../../visual-basic/language-reference/modifiers/overloads.md).  
+ L'overload viene usato per definire più versioni di una proprietà o routine tutte appartenenti alla stessa classe. Non è possibile definire un'ulteriore versione del membro di una classe base a meno che questo non specifichi già [Overloads](../language-reference/modifiers/overloads.md).  
   
  Per impostazione predefinita, si tratta di un messaggio di avviso. Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).  
   
@@ -25,15 +25,15 @@ Una proprietà o routine usa la parola chiave [Overloads](../../visual-basic/lan
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore  
   
-- Se si vuole definire un'ulteriore versione del membro di una classe base e accedere al codice sorgente della classe stessa, aggiungere la parola chiave [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) alla definizione della classe base.  
+- Se si vuole definire un'ulteriore versione del membro di una classe base e accedere al codice sorgente della classe stessa, aggiungere la parola chiave [Overloads](../language-reference/modifiers/overloads.md) alla definizione della classe base.  
   
 - Se non si hanno i diritti di accesso al codice sorgente della classe base, non è possibile eseguire l'overload del membro in una classe derivata. Rimuovere la parola chiave `Overloads` .  
   
-- Se si vuole sostituire il membro della classe base anziché definirne un'ulteriore versione, usare la parola chiave [Overrides](../../visual-basic/language-reference/modifiers/overrides.md) invece di `Overloads`.  
+- Se si vuole sostituire il membro della classe base anziché definirne un'ulteriore versione, usare la parola chiave [Overrides](../language-reference/modifiers/overrides.md) invece di `Overloads`.  
   
-- Se si vuole nascondere il membro della classe base con un nuovo membro nella classe derivata, usare la parola chiave [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) invece di `Overloads`.  
+- Se si vuole nascondere il membro della classe base con un nuovo membro nella classe derivata, usare la parola chiave [Shadows](../language-reference/modifiers/shadows.md) invece di `Overloads`.  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Overload della routine](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)
-- [Nozioni fondamentali sull'ereditarietà](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [Overload della routine](../programming-guide/language-features/procedures/procedure-overloading.md)
+- [Nozioni fondamentali sull'ereditarietà](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
