--- a/docs/visual-basic/misc/bc40022.md
+++ b/docs/visual-basic/misc/bc40022.md
@@ -1,5 +1,5 @@
 ---
-title: Membro '<membername1>'dichiara in modo implicito'<implicitmembername>', che è in conflitto con un membro nella classe base'<baseclassname>'
+title: Il membro ' <membername1> ' dichiara in modo implicito ' <implicitmembername> ', che è in conflitto con un membro nella classe base ' <baseclassname> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc40022
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC40022
 ms.assetid: be5bb2ee-2274-42b2-b843-179b14127b34
-ms.openlocfilehash: 11bb97d98c8ad94b7f2458a351afc64c11cb9fa1
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9fd1ceb81cc84e466a4fca1f65f820111b4687d4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64624440"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384339"
 ---
-# <a name="member-membername1-implicitly-declares-implicitmembername-which-conflicts-with-a-member-in-the-base-class-baseclassname"></a>Membro '\<membername1 >' dichiara in modo implicito '\<nomemembroimplicito > ', che è in conflitto con un membro nella classe base'\<nomeclassebase >'
-Membro '\<membername1 >' dichiara in modo implicito '\<nomemembroimplicito > ', che è in conflitto con un membro nella classe base'\<nomeclassebase >', e in modo che il membro non deve essere dichiarato 'Overloads'  
+# <a name="member-membername1-implicitly-declares-implicitmembername-which-conflicts-with-a-member-in-the-base-class-baseclassname"></a>Il membro ' \<membername1> ' dichiara in modo implicito ' \<implicitmembername> ', che è in conflitto con un membro nella classe base ' \<baseclassname> '
+Il membro ' \<membername1> ' dichiara in modo implicito ' \<implicitmembername> ', che è in conflitto con un membro nella classe base ' \<baseclassname> ', quindi il membro non deve essere dichiarato come ' Overloads '  
   
- Una proprietà in una classe derivata genera un membro implicito con lo stesso nome di un membro della classe base e specifica la parola chiave [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) .  
+ Una proprietà in una classe derivata genera un membro implicito con lo stesso nome di un membro della classe base e specifica la parola chiave [Overloads](../language-reference/modifiers/overloads.md) .  
   
- L'overload viene usato per definire più versioni di una proprietà o routine tutte appartenenti alla stessa classe. Non è possibile definire un'ulteriore versione del membro di una classe base a meno che questo non specifichi già `Overloads`. Dal momento che il membro della classe base in conflitto non specifica `Overloads`, il compilatore presuppone che questa proprietà [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) sia il membro della classe base implicita.  
+ L'overload viene usato per definire più versioni di una proprietà o routine tutte appartenenti alla stessa classe. Non è possibile definire un'ulteriore versione del membro di una classe base a meno che questo non specifichi già `Overloads`. Dal momento che il membro della classe base in conflitto non specifica `Overloads`, il compilatore presuppone che questa proprietà [Shadows](../language-reference/modifiers/shadows.md) sia il membro della classe base implicita.  
   
  Il compilatore Visual Basic crea membri impliciti corrispondenti a determinati elementi di programmazione dichiarati. La tabella seguente riepiloga questi membri impliciti o *sintetici*.  
   
 |Elemento dichiarato|Membri creati in modo implicito|  
 |----------------------|--------------------------------|  
-|Enumerazione|Membro`value__` |  
-|event|Routine`add_<eventname>` <br /><br /> Routine`remove_<eventname>` <br /><br /> Campo di`<eventname>Event` <br /><br /> Delegato`<eventname>EventHandler` |  
-|Proprietà|Routine`get_<propertyname>` <br /><br /> Routine`set_<propertyname>` |  
-|Membro`My.Form` , membro `My.WebService` , membro or member of a class marked with the <xref:Microsoft.VisualBasic.MyGroupCollectionAttribute> |Variabile`m_<variablename>` `Static` <br /><br /> Proprietà`<variablename>` <br /><br /> Routine`get_<variablename>` <br /><br /> Routine`set_<variablename>` |  
-|Variabile`WithEvents` |Variabile `_<variablename>`<br /><br /> Proprietà `<variablename>`<br /><br /> Routine`get_<variablename>` <br /><br /> Routine`set_<variablename>` |  
+|Enumerazione|Membro`value__`|  
+|Event|Routine`add_<eventname>`<br /><br /> Routine`remove_<eventname>`<br /><br /> Campo di`<eventname>Event`<br /><br /> Delegato`<eventname>EventHandler`|  
+|Proprietà|Routine`get_<propertyname>`<br /><br /> Routine`set_<propertyname>`|  
+|Membro`My.Form` , membro `My.WebService` , membro or member of a class marked with the <xref:Microsoft.VisualBasic.MyGroupCollectionAttribute>|`m_<variablename>``Static`variabile<br /><br /> Proprietà `<variablename>`<br /><br /> Routine`get_<variablename>`<br /><br /> Routine`set_<variablename>`|  
+|Variabile|Variabile<br /><br /> Proprietà `<variablename>`<br /><br /> Routine`get_<variablename>`<br /><br /> Routine`set_<variablename>`|  
   
  A causa del rischio di conflitti di nomi, è consigliabile evitare di denominare gli elementi di programmazione dichiarati usando la stessa forma di qualsiasi membro implicito. Ad esempio, è consigliabile evitare qualsiasi nome di elemento che inizia con `get_` o `set_`.  
   
@@ -39,10 +39,10 @@ Membro '\<membername1 >' dichiara in modo implicito '\<nomemembroimplicito > ', 
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore  
   
-- Se si prevede di nascondere il membro della classe base, sostituire la parola chiave [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) con la parola chiave [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) nella dichiarazione della proprietà.  
+- Se si prevede di nascondere il membro della classe base, sostituire la parola chiave [Overloads](../language-reference/modifiers/overloads.md) con la parola chiave [Shadows](../language-reference/modifiers/shadows.md) nella dichiarazione della proprietà.  
   
 - Se non si intende nascondere il membro della classe base, modificare il nome della proprietà per evitare conflitti con i nomi elencati nella tabella precedente.  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Nomi di elementi dichiarati](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
+- [Declared Element Names](../programming-guide/language-features/declared-elements/declared-element-names.md)
