--- a/docs/visual-basic/misc/bc30125.md
+++ b/docs/visual-basic/misc/bc30125.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30125
 ms.assetid: c2b18086-9cd9-4094-b9a9-491c8d617096
-ms.openlocfilehash: ab0826fe93d0b7daf803354aedcf376d291a643f
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 25d69b9303b6f54d5075e6694df0c39577c5273a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61682859"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380224"
 ---
 # <a name="writeonly-property-must-provide-a-set"></a>La proprietà 'WriteOnly' deve fornire un 'Set'
 Se una proprietà viene dichiarata come `WriteOnly`, deve fornire una routine per la scrittura del relativo valore.  
@@ -27,5 +27,5 @@ Se una proprietà viene dichiarata come `WriteOnly`, deve fornire una routine pe
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Property](../../visual-basic/language-reference/statements/property-statement.md)
-- [Istruzione Set](../../visual-basic/language-reference/statements/set-statement.md)
+- [Property Statement](../language-reference/statements/property-statement.md)
+- [Istruzione set](../language-reference/statements/set-statement.md)
