--- a/docs/visual-basic/misc/bc30132.md
+++ b/docs/visual-basic/misc/bc30132.md
@@ -1,5 +1,5 @@
 ---
-title: Etichetta '<labelname>' non è definito
+title: Etichetta '<labelname>' non definita
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30132
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30132
 ms.assetid: 3a7be2ea-7e10-4ac6-921a-d094b41e9142
-ms.openlocfilehash: 9bc2270df76c1da7c38ce42dc8616e7a26ed7f7c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 8102a1216703682356e4e5906695b4166f638ad3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64606363"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380081"
 ---
-# <a name="label-labelname-is-not-defined"></a>Etichetta '\<NomeEtichetta >' non è definito
+# <a name="label-labelname-is-not-defined"></a>Etichetta '\<labelname>' non definita
 Viene fatto riferimento a un'etichetta di riga o un numero di riga, che tuttavia non è definito dell'ambito del riferimento. L'etichetta deve essere all'interno della routine che contiene il riferimento.  
   
  **ID errore:** BC30132  
@@ -25,6 +25,6 @@ Viene fatto riferimento a un'etichetta di riga o un numero di riga, che tuttavia
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Property](../../visual-basic/language-reference/statements/property-statement.md)
-- [Routine](../../visual-basic/programming-guide/language-features/procedures/index.md)
-- [Procedura: etichettare le istruzioni](../../visual-basic/programming-guide/program-structure/how-to-label-statements.md)
+- [Property Statement](../language-reference/statements/property-statement.md)
+- [Procedure](../programming-guide/language-features/procedures/index.md)
+- [Procedura: Etichettare le istruzioni](../programming-guide/program-structure/how-to-label-statements.md)
