--- a/docs/visual-basic/misc/bc30238.md
+++ b/docs/visual-basic/misc/bc30238.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30238
 ms.assetid: 81513cb5-69e7-4d62-b33e-e54cb8c5e8bf
-ms.openlocfilehash: 5add2630a392677318d2ca10e5ace3c4390ca437
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 16370a8894660d5728abe28ee0cc279ae852624a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913498"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379861"
 ---
 # <a name="loop-cannot-have-a-condition-if-matching-do-has-one"></a>'Loop' non può contenere una condizione se questa è già presente nell'elemento 'Do' corrispondente
 Un'istruzione `Loop` contiene una clausola `While` o `Until` e anche l'istruzione `Do` corrispondente contiene una clausola di questo tipo. Solo una delle istruzioni `Do` e `Loop` in un ciclo può specificare una condizione.  
@@ -25,4 +25,4 @@ Un'istruzione `Loop` contiene una clausola `While` o `Until` e anche l'istruzion
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Do...Loop](../../visual-basic/language-reference/statements/do-loop-statement.md)
+- [Istruzione Do...Loop](../language-reference/statements/do-loop-statement.md)
