--- a/docs/visual-basic/misc/bc36557.md
+++ b/docs/visual-basic/misc/bc36557.md
@@ -1,5 +1,5 @@
 ---
-title: "'<membername>' non è<contextname>un membro di ' '; non esiste nel contesto corrente"
+title: "' <membername> ' non è un membro di ' <contextname> ' e non esiste nel contesto corrente"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36557
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36557
 ms.assetid: d8671f1c-d545-44da-89b3-7d892e01e8be
-ms.openlocfilehash: d35c52c279749ad451a11b0a1ac1c8c8d120139b
-ms.sourcegitcommit: 43d10ef65f0f1fd6c3b515e363bde11a3fcd8d6d
+ms.openlocfilehash: 8aa9967c332afeb9d31e6076feb7600853d44bac
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/04/2020
-ms.locfileid: "78266807"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378367"
 ---
-# <a name="membername-is-not-a-member-of-contextname-it-does-not-exist-in-the-current-context"></a>'\<nomemembro>' non è\<un membro di ' contextname>'; non esiste nel contesto corrente
+# <a name="membername-is-not-a-member-of-contextname-it-does-not-exist-in-the-current-context"></a>' \<membername> ' non è un membro di ' \<contextname> ' e non esiste nel contesto corrente
 È stato assegnato un nome di membro inesistente a una proprietà in una dichiarazione di tipo anonimo. Nell'esempio seguente `.Prop1` e `.Prop2` sono le proprietà del tipo anonimo. Il tentativo di assegnare `.Prop3` a `.Prop2` provoca l'errore.  
   
 ```vb  
@@ -34,5 +34,5 @@ Dim anon2 = New With {.Prop1 = 27, .Prop2 = .Prop1}
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipi anonimi](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)
-- [Procedura: dedurre tipi e nomi di proprietà nelle dichiarazioni di tipo anonimo](../../visual-basic/programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
+- [Tipi anonimi](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
+- [Procedura: dedurre tipi e nomi di proprietà nelle dichiarazioni di tipo anonimo](../programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
