--- a/docs/visual-basic/misc/bc36560.md
+++ b/docs/visual-basic/misc/bc36560.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36560
 ms.assetid: 70eee559-d6fc-409b-b835-2c84511b160e
-ms.openlocfilehash: cd8b41da91e437f8af1c61b57078e96488f02880
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c74f4e5a86459ef5b7bed7a766aff7ad63720305
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64666155"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378263"
 ---
 # <a name="type-characters-cannot-be-used-in-anonymous-type-declarations"></a>Non è possibile usare i caratteri tipo nelle dichiarazioni di tipo anonimo
 Quando si dichiara un'istanza di un tipo anonimo, non è possibile usare un carattere tipo in un nome di proprietà. Il tipo di dati della proprietà viene dedotto dal valore assegnato a esso. Ad esempio, le dichiarazioni seguenti non sono valide.  
@@ -37,6 +37,6 @@ Dim anon2 = New With {.ID = CStr(42)}
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipi anonimi](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)
-- [Procedura: Dedurre i nomi delle proprietà e i tipi nelle dichiarazioni di tipo anonimo](../../visual-basic/programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
-- [Conversioni implicite ed esplicite](../../visual-basic/programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
+- [Tipi anonimi](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
+- [Procedura: dedurre tipi e nomi di proprietà nelle dichiarazioni di tipo anonimo](../programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
+- [Conversioni implicite ed esplicite](../programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
