--- a/docs/visual-basic/misc/bc36566.md
+++ b/docs/visual-basic/misc/bc36566.md
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36566
 ms.assetid: b37af6bc-abd0-4436-bf8a-a467e3603342
-ms.openlocfilehash: b9343866d5e38cacaefc161f66a07291f873a107
-ms.sourcegitcommit: 43d10ef65f0f1fd6c3b515e363bde11a3fcd8d6d
+ms.openlocfilehash: 31096dc73dba00a434072331ccd4a54aab254b6d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/04/2020
-ms.locfileid: "78266782"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378055"
 ---
-# <a name="parameter-parametername-already-has-a-matching-omitted-argument"></a>Il\<parametro ' nomeparametro>' contiene già un argomento omesso corrispondente
+# <a name="parameter-parametername-already-has-a-matching-omitted-argument"></a>Il parametro '\<parametername>' ha già un argomento omesso corrispondente
 
 Una chiamata di routine fornisce un argomento in base al nome dopo aver omesso lo stesso argomento in base alla posizione. Di seguito è riportato un esempio:
   
@@ -34,4 +34,4 @@ Call ABC(6, , Y:=3)
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Passaggio di argomenti in base alla posizione e al nome](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+- [Passaggio di argomenti in base alla posizione e al nome](../programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
